# examples

./: .gitignore  README.md  index.html  params.json
Embedded/: readme.txt
Embedded/dcf77_on_MSP430_enterprise_arch/: create.bat  dcf77.dep  dcf77.eap  dcf77.ewp  decoder.h  decoder.xml  decoder_ext.h
EnergiaBlink/: EnergiaBlink.ino  README.MD  SCMakefile  SM.png.bak  Statemachine.cpp  Statemachine.h  Statemachine_ext.h  Statemachine_trace.h  Statemachine_trace.java  codegen.cfg  fifo.c  fifo.h  model.asta  timer.c  timer.h
MicrowaveOvenWithRegions_AndWithoutRegions/: oven_hierarchical_vi_editor.xml  oven_regions_vis_editor.xml
SysML_V2_TextualNotation/: framework.h  readme.md
Windows/microwave_int_editor_regions_cpp11/: CMakeLists.txt  codegen.cfg  main.cpp  oven.xml  readme.md
Windows/microwave_int_editor_regions_cpp11/inc/: SafeQueue.hpp  SimpleTimer.hpp  my_oven.h  ovenbase.h
lib/: fifo.h  readme.md  timer.c
sm_using_timer_queue_osx_freebsd_linux/: Makefile  codegen.cfg  main.c  test.xml
sm_using_timer_queue_win32/: build.bat  codegen.cfg  edit.bat  main.c  test.c  test.h  test.xml  test_dbg.h  test_ext.h
vending_machine/: Makefile  activity_change_algorithm.c  activity_change_algorithm.h  codegen.cfg  coinbank.c  coinbank.h  display_with_coinbank.c  display_with_coinbank.h  main.c  product_store.c  product_store.h  product_store_sm.c  product_store_sm.h  product_store_sm_dbg.h  product_store_sm_ext.h  readme.md  vending_machine.asta  vending_machine.c  vending_machine.h  vending_machine_dbg.h  vending_machine_exe  vending_machine_ext.h
(+457 files in other folders)
